Fix scrollbar to work outside of container content for editor

--- a/src/renderer/css/global.css
+++ b/src/renderer/css/global.css
@@ -1,7 +1,7 @@
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   display: none;
-}
+} */
 
 .nav-link {
   cursor: default;
